apps/base/gitlab/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab
  namespace: gitlab
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitlab.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: gitlab-webservice-default
          port: 8181

  tls:
    secretName: ${CERT_SECRET_INTERNAL}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab-registry
  namespace: gitlab
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`registry.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: gitlab-registry
          port: 5000

  tls:
    secretName: ${CERT_SECRET_INTERNAL}
